[tool.poetry]
name = "dynes-fit-tool"
version = "0.1.0"
description = "Tool to fit Dynes function"
authors = ["Takayuki YANO <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15.0"
scipy = "^1.3.0"
pandas = "^1.0.0"
plotly = "^4.0.0"
dash = "^1.0.0"
dash-bootstrap-components = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.0"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

